@@ -10,7 +10,6 @@
 
 package org.junit.jupiter.engine.descriptor;
 
-import static java.util.stream.Collectors.toList;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.Mockito.mock;
@@ -135,7 +134,7 @@ class JupiterTestDescriptorTests {
 		assertEquals("custom test name", methodDescriptor.getDisplayName(), "display name:");
 		assertEquals("foo()", methodDescriptor.getLegacyReportingName(), "legacy name:");
 
-		List<String> tags = methodDescriptor.getTags().stream().map(TestTag::getName).collect(toList());
+		List<String> tags = methodDescriptor.getTags().stream().map(TestTag::getName).toList();
 		assertThat(tags).containsExactlyInAnyOrder("inherited-class-level-tag", "classTag1", "classTag2", "methodTag1",
 			"methodTag2");
 	}
@@ -296,7 +295,7 @@ class JupiterTestDescriptorTests {
 	@Tag("classTag1")
 	@Tag("classTag2")
 	@DisplayName("custom class name")
-	@SuppressWarnings("unused")
+	@SuppressWarnings({ "unused", "JUnitMalformedDeclaration" })
 	private static class TestCase extends AbstractTestCase {
 
 		void test() {
@@ -331,9 +330,11 @@ class JupiterTestDescriptorTests {
 
 	}
 
+	@SuppressWarnings("JUnitMalformedDeclaration")
 	private static class TestCaseWithInvalidBeforeAllMethod {
 
 		// must be static
+		@SuppressWarnings("JUnitMalformedDeclaration")
 		@BeforeAll
 		void beforeAll() {
 		}
@@ -344,9 +345,11 @@ class JupiterTestDescriptorTests {
 
 	}
 
+	@SuppressWarnings("JUnitMalformedDeclaration")
 	private static class TestCaseWithInvalidAfterAllMethod {
 
 		// must be static
+		@SuppressWarnings("JUnitMalformedDeclaration")
 		@AfterAll
 		void afterAll() {
 		}
@@ -357,9 +360,11 @@ class JupiterTestDescriptorTests {
 
 	}
 
+	@SuppressWarnings("JUnitMalformedDeclaration")
 	private static class TestCaseWithInvalidBeforeEachMethod {
 
 		// must NOT be static
+		@SuppressWarnings("JUnitMalformedDeclaration")
 		@BeforeEach
 		static void beforeEach() {
 		}
@@ -370,9 +375,11 @@ class JupiterTestDescriptorTests {
 
 	}
 
+	@SuppressWarnings("JUnitMalformedDeclaration")
 	private static class TestCaseWithInvalidAfterEachMethod {
 
 		// must NOT be static
+		@SuppressWarnings("JUnitMalformedDeclaration")
 		@AfterEach
 		static void afterEach() {
 		}
